---
source: compiler-core/src/javascript/tests/lists.rs
expression: "\npub fn go(x) {\n    [{True 1}]\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
    [{True 1}]
}


----- COMPILED JAVASCRIPT
import { List$Empty$const as $List$Empty$const, prepend as listPrepend } from "../gleam.mjs";

export function go(x) {
  return listPrepend(
    (() => {
      true;
      return 1;
    })(),
    $List$Empty$const,
  );
}
